<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grey_background"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499">

        <TextView
            android:id="@+id/welcome_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_message"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="70sp"

            android:textStyle="bold" />
        <TextView
            android:id="@+id/welcome_message_part_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcome_message"
            android:layout_marginBottom="40dp"
            android:text="@string/welcome_message_part_2"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="20sp"

            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/buttons_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcome_message_part_2"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/oval_button"
                android:onClick="makeBoard3x3"
                android:text="@string/smaller_board_button"
                android:textColor="#ffffff" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/oval_button"
                android:onClick="makeBoard4x4"
                android:text="@string/bigger_board_button"
                android:textColor="#ffffff" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttons_layout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:layout_below="@id/buttons_layout"
            android:paddingTop="20dp">

            <ImageButton
                android:id="@+id/info_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:adjustViewBounds="true"
                android:background="@null"
                android:contentDescription="@string/info_button_content_description"
                android:onClick="goToInfoPage"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/info_icon_white" />

            <ImageButton
                android:id="@+id/settings_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:adjustViewBounds="true"
                android:background="@null"
                android:contentDescription="@string/settings_button_content_description"
                android:onClick="goToSettingsPage"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/list_icon_white" />

        </LinearLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>